{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 1743,
  "lineage": "041ee1bc-1bb6-db16-02a9-f49fc5b3000d",
  "resources": [
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_security_group",
      "name": "was-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:security-group/sg-06ec60fe4f80cb312",
            "description": "Allow WEB EC2 ONLY",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-was-alb-sg"
                ]
              }
            ],
            "id": "sg-06ec60fe4f80cb312",
            "name": "terraform-2024050900365912250000000b",
            "tags": {
              "Name": "3-Tier-was-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_security_group",
      "name": "web-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:security-group/sg-0e60b1cc86212cf5a",
            "description": "Allow HTTP and HTTPS for World",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-web-alb-sg"
                ]
              }
            ],
            "id": "sg-0e60b1cc86212cf5a",
            "name": "terraform-20240509003654851300000009",
            "tags": {
              "Name": "3-Tier-web-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private1-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:subnet/subnet-0b5dbbdba471ab9ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "192.168.20.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-Private1-Subnet1"
                ]
              }
            ],
            "id": "subnet-0b5dbbdba471ab9ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "3-Tier-Private1-Subnet1"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private1-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:subnet/subnet-075746c3f833aa4e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "available_ip_address_count": 250,
            "cidr_block": "192.168.50.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-Private1-Subnet2"
                ]
              }
            ],
            "id": "subnet-075746c3f833aa4e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "3-Tier-Private1-Subnet2"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:subnet/subnet-08d8c840d155b0ed1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "192.168.10.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-Public-Subnet1"
                ]
              }
            ],
            "id": "subnet-08d8c840d155b0ed1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "3-Tier-Public-Subnet1"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:subnet/subnet-075746c3f833aa4e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "available_ip_address_count": 250,
            "cidr_block": "192.168.50.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-Private1-Subnet2"
                ]
              }
            ],
            "id": "subnet-075746c3f833aa4e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "3-Tier-Private1-Subnet2"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:vpc/vpc-0e10412dba9535c77",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-001a646ef99433bf5",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0ca02d48b1d18e4d7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-VPC"
                ]
              }
            ],
            "id": "vpc-0e10412dba9535c77",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bb9877f287698b9a",
            "owner_id": "891377163278",
            "tags": {
              "Name": "3-Tier-VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "was-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:loadbalancer/app/Was-elb/8eff29a68c8ace03",
            "arn_suffix": "app/Was-elb/8eff29a68c8ace03",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-Was-elb-209829783.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:loadbalancer/app/Was-elb/8eff29a68c8ace03",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Was-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06ec60fe4f80cb312"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-075746c3f833aa4e6"
              },
              {
                "subnet_id": "subnet-0b5dbbdba471ab9ca"
              }
            ],
            "subnets": [
              "subnet-075746c3f833aa4e6",
              "subnet-0b5dbbdba471ab9ca"
            ],
            "tags": {
              "Name": "Was-elb"
            },
            "tags_all": {
              "Name": "Was-elb"
            },
            "vpc_id": "vpc-0e10412dba9535c77",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.alb.data.aws_security_group.was-alb-sg",
            "module.alb.data.aws_subnet.private1-subnet1",
            "module.alb.data.aws_subnet.private1-subnet2",
            "module.aws-rds.aws_db_subnet_group.db_subnet_group1",
            "module.aws-rds.aws_db_subnet_group.db_subnet_group2",
            "module.aws-rds.aws_rds_cluster.aurora_cluster",
            "module.aws-rds.data.aws_availability_zones.available",
            "module.aws-rds.data.aws_security_group.db-sg",
            "module.aws-rds.data.aws_subnet.private1-subnet1",
            "module.aws-rds.data.aws_subnet.private1-subnet2",
            "module.aws-rds.data.aws_subnet.private2-subnet1",
            "module.aws-rds.data.aws_subnet.private2-subnet2",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.was-alb-sg",
            "module.security-group.aws_security_group.was-tier-sg",
            "module.security-group.aws_security_group.web-alb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private1-rt1",
            "module.vpc.aws_route_table.private1-rt2",
            "module.vpc.aws_route_table.private2-rt1",
            "module.vpc.aws_route_table.private2-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private1-rt-association1",
            "module.vpc.aws_route_table_association.private1-rt-association2",
            "module.vpc.aws_route_table_association.private2-rt-association1",
            "module.vpc.aws_route_table_association.private2-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private1-subnet1",
            "module.vpc.aws_subnet.private1-subnet2",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:loadbalancer/app/Web-elb/a23b9384b14d164b",
            "arn_suffix": "app/Web-elb/a23b9384b14d164b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Web-elb-332529042.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:loadbalancer/app/Web-elb/a23b9384b14d164b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Web-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e60b1cc86212cf5a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-075746c3f833aa4e6"
              },
              {
                "subnet_id": "subnet-08d8c840d155b0ed1"
              }
            ],
            "subnets": [
              "subnet-075746c3f833aa4e6",
              "subnet-08d8c840d155b0ed1"
            ],
            "tags": {
              "Name": "Web-elb"
            },
            "tags_all": {
              "Name": "Web-elb"
            },
            "vpc_id": "vpc-0e10412dba9535c77",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.alb.data.aws_security_group.web-alb-sg",
            "module.alb.data.aws_subnet.public-subnet1",
            "module.alb.data.aws_subnet.public-subnet2",
            "module.aws-rds.aws_db_subnet_group.db_subnet_group1",
            "module.aws-rds.aws_db_subnet_group.db_subnet_group2",
            "module.aws-rds.aws_rds_cluster.aurora_cluster",
            "module.aws-rds.data.aws_availability_zones.available",
            "module.aws-rds.data.aws_security_group.db-sg",
            "module.aws-rds.data.aws_subnet.private1-subnet1",
            "module.aws-rds.data.aws_subnet.private1-subnet2",
            "module.aws-rds.data.aws_subnet.private2-subnet1",
            "module.aws-rds.data.aws_subnet.private2-subnet2",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.was-alb-sg",
            "module.security-group.aws_security_group.was-tier-sg",
            "module.security-group.aws_security_group.web-alb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private1-rt1",
            "module.vpc.aws_route_table.private1-rt2",
            "module.vpc.aws_route_table.private2-rt1",
            "module.vpc.aws_route_table.private2-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private1-rt-association1",
            "module.vpc.aws_route_table_association.private1-rt-association2",
            "module.vpc.aws_route_table_association.private2-rt-association1",
            "module.vpc.aws_route_table_association.private2-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private1-subnet1",
            "module.vpc.aws_subnet.private1-subnet2",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "was-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:listener/app/Was-elb/8eff29a68c8ace03/c4f86fb35a7dd3ad",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:targetgroup/Was-TG/480008a35f8f5056",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:listener/app/Was-elb/8eff29a68c8ace03/c4f86fb35a7dd3ad",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:loadbalancer/app/Was-elb/8eff29a68c8ace03",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.was-elb",
            "module.alb.aws_lb_target_group.was-tg",
            "module.alb.data.aws_security_group.was-alb-sg",
            "module.alb.data.aws_subnet.private1-subnet1",
            "module.alb.data.aws_subnet.private1-subnet2",
            "module.alb.data.aws_vpc.vpc",
            "module.aws-rds.aws_db_subnet_group.db_subnet_group1",
            "module.aws-rds.aws_db_subnet_group.db_subnet_group2",
            "module.aws-rds.aws_rds_cluster.aurora_cluster",
            "module.aws-rds.data.aws_availability_zones.available",
            "module.aws-rds.data.aws_security_group.db-sg",
            "module.aws-rds.data.aws_subnet.private1-subnet1",
            "module.aws-rds.data.aws_subnet.private1-subnet2",
            "module.aws-rds.data.aws_subnet.private2-subnet1",
            "module.aws-rds.data.aws_subnet.private2-subnet2",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.was-alb-sg",
            "module.security-group.aws_security_group.was-tier-sg",
            "module.security-group.aws_security_group.web-alb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private1-rt1",
            "module.vpc.aws_route_table.private1-rt2",
            "module.vpc.aws_route_table.private2-rt1",
            "module.vpc.aws_route_table.private2-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private1-rt-association1",
            "module.vpc.aws_route_table_association.private1-rt-association2",
            "module.vpc.aws_route_table_association.private2-rt-association1",
            "module.vpc.aws_route_table_association.private2-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private1-subnet1",
            "module.vpc.aws_subnet.private1-subnet2",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:listener/app/Web-elb/a23b9384b14d164b/e3c8f147a0e283df",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:targetgroup/Web-TG/10f7b5a14c0fd039",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:listener/app/Web-elb/a23b9384b14d164b/e3c8f147a0e283df",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:loadbalancer/app/Web-elb/a23b9384b14d164b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.web-elb",
            "module.alb.aws_lb_target_group.web-tg",
            "module.alb.data.aws_security_group.web-alb-sg",
            "module.alb.data.aws_subnet.public-subnet1",
            "module.alb.data.aws_subnet.public-subnet2",
            "module.alb.data.aws_vpc.vpc",
            "module.aws-rds.aws_db_subnet_group.db_subnet_group1",
            "module.aws-rds.aws_db_subnet_group.db_subnet_group2",
            "module.aws-rds.aws_rds_cluster.aurora_cluster",
            "module.aws-rds.data.aws_availability_zones.available",
            "module.aws-rds.data.aws_security_group.db-sg",
            "module.aws-rds.data.aws_subnet.private1-subnet1",
            "module.aws-rds.data.aws_subnet.private1-subnet2",
            "module.aws-rds.data.aws_subnet.private2-subnet1",
            "module.aws-rds.data.aws_subnet.private2-subnet2",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.was-alb-sg",
            "module.security-group.aws_security_group.was-tier-sg",
            "module.security-group.aws_security_group.web-alb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private1-rt1",
            "module.vpc.aws_route_table.private1-rt2",
            "module.vpc.aws_route_table.private2-rt1",
            "module.vpc.aws_route_table.private2-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private1-rt-association1",
            "module.vpc.aws_route_table_association.private1-rt-association2",
            "module.vpc.aws_route_table_association.private2-rt-association1",
            "module.vpc.aws_route_table_association.private2-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private1-subnet1",
            "module.vpc.aws_subnet.private1-subnet2",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "was-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:targetgroup/Was-TG/480008a35f8f5056",
            "arn_suffix": "targetgroup/Was-TG/480008a35f8f5056",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:targetgroup/Was-TG/480008a35f8f5056",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Was-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Was-TG"
            },
            "tags_all": {
              "Name": "Was-TG"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "dependencies": [
            "module.alb.aws_lb.was-elb",
            "module.alb.data.aws_security_group.was-alb-sg",
            "module.alb.data.aws_subnet.private1-subnet1",
            "module.alb.data.aws_subnet.private1-subnet2",
            "module.alb.data.aws_vpc.vpc",
            "module.aws-rds.aws_db_subnet_group.db_subnet_group1",
            "module.aws-rds.aws_db_subnet_group.db_subnet_group2",
            "module.aws-rds.aws_rds_cluster.aurora_cluster",
            "module.aws-rds.data.aws_availability_zones.available",
            "module.aws-rds.data.aws_security_group.db-sg",
            "module.aws-rds.data.aws_subnet.private1-subnet1",
            "module.aws-rds.data.aws_subnet.private1-subnet2",
            "module.aws-rds.data.aws_subnet.private2-subnet1",
            "module.aws-rds.data.aws_subnet.private2-subnet2",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.was-alb-sg",
            "module.security-group.aws_security_group.was-tier-sg",
            "module.security-group.aws_security_group.web-alb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private1-rt1",
            "module.vpc.aws_route_table.private1-rt2",
            "module.vpc.aws_route_table.private2-rt1",
            "module.vpc.aws_route_table.private2-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private1-rt-association1",
            "module.vpc.aws_route_table_association.private1-rt-association2",
            "module.vpc.aws_route_table_association.private2-rt-association1",
            "module.vpc.aws_route_table_association.private2-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private1-subnet1",
            "module.vpc.aws_subnet.private1-subnet2",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:targetgroup/Web-TG/10f7b5a14c0fd039",
            "arn_suffix": "targetgroup/Web-TG/10f7b5a14c0fd039",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:targetgroup/Web-TG/10f7b5a14c0fd039",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Web-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Web-TG"
            },
            "tags_all": {
              "Name": "Web-TG"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "dependencies": [
            "module.alb.aws_lb.web-elb",
            "module.alb.data.aws_security_group.web-alb-sg",
            "module.alb.data.aws_subnet.public-subnet1",
            "module.alb.data.aws_subnet.public-subnet2",
            "module.alb.data.aws_vpc.vpc",
            "module.aws-rds.aws_db_subnet_group.db_subnet_group1",
            "module.aws-rds.aws_db_subnet_group.db_subnet_group2",
            "module.aws-rds.aws_rds_cluster.aurora_cluster",
            "module.aws-rds.data.aws_availability_zones.available",
            "module.aws-rds.data.aws_security_group.db-sg",
            "module.aws-rds.data.aws_subnet.private1-subnet1",
            "module.aws-rds.data.aws_subnet.private1-subnet2",
            "module.aws-rds.data.aws_subnet.private2-subnet1",
            "module.aws-rds.data.aws_subnet.private2-subnet2",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.was-alb-sg",
            "module.security-group.aws_security_group.was-tier-sg",
            "module.security-group.aws_security_group.web-alb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private1-rt1",
            "module.vpc.aws_route_table.private1-rt2",
            "module.vpc.aws_route_table.private2-rt1",
            "module.vpc.aws_route_table.private2-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private1-rt-association1",
            "module.vpc.aws_route_table_association.private1-rt-association2",
            "module.vpc.aws_route_table_association.private2-rt-association1",
            "module.vpc.aws_route_table_association.private2-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private1-subnet1",
            "module.vpc.aws_subnet.private1-subnet2",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "was-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:targetgroup/Was-TG/480008a35f8f5056",
            "arn_suffix": "targetgroup/Was-TG/480008a35f8f5056",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:targetgroup/Was-TG/480008a35f8f5056",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:loadbalancer/app/Was-elb/8eff29a68c8ace03"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Was-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Was-TG"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0e10412dba9535c77"
          }
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "web-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:targetgroup/Web-TG/10f7b5a14c0fd039",
            "arn_suffix": "targetgroup/Web-TG/10f7b5a14c0fd039",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:targetgroup/Web-TG/10f7b5a14c0fd039",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:891377163278:loadbalancer/app/Web-elb/a23b9384b14d164b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Web-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Web-TG"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0e10412dba9535c77"
          }
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "data",
      "type": "aws_security_group",
      "name": "was-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:security-group/sg-0a5d114e18916deb3",
            "description": "Allow HTTP and HTTPS for WEB Only",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-was-sg"
                ]
              }
            ],
            "id": "sg-0a5d114e18916deb3",
            "name": "terraform-2024050900370164010000000c",
            "tags": {
              "Name": "3-Tier-was-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "data",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:security-group/sg-016d78b3f0bd91bc7",
            "description": "Allow HTTP and HTTPS for ALB Only",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-web-sg"
                ]
              }
            ],
            "id": "sg-016d78b3f0bd91bc7",
            "name": "terraform-2024050900365694190000000a",
            "tags": {
              "Name": "3-Tier-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private1-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:subnet/subnet-0b5dbbdba471ab9ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "192.168.20.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-Private1-Subnet1"
                ]
              }
            ],
            "id": "subnet-0b5dbbdba471ab9ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "3-Tier-Private1-Subnet1"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          }
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private1-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:subnet/subnet-075746c3f833aa4e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "available_ip_address_count": 248,
            "cidr_block": "192.168.50.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-Private1-Subnet2"
                ]
              }
            ],
            "id": "subnet-075746c3f833aa4e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "3-Tier-Private1-Subnet2"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          }
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:subnet/subnet-08d8c840d155b0ed1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "192.168.10.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-Public-Subnet1"
                ]
              }
            ],
            "id": "subnet-08d8c840d155b0ed1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "3-Tier-Public-Subnet1"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          }
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:subnet/subnet-0823da2c6ca30d684",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "available_ip_address_count": 250,
            "cidr_block": "192.168.40.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-Public-Subnet2"
                ]
              }
            ],
            "id": "subnet-0823da2c6ca30d684",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "3-Tier-Public-Subnet2"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          }
        }
      ]
    },
    {
      "module": "module.aws-rds",
      "mode": "data",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:security-group/sg-0a708124d04a13629",
            "description": "Protocol Type MySQL/Aurora",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-db-sg"
                ]
              }
            ],
            "id": "sg-0a708124d04a13629",
            "name": "terraform-2024050900370426500000000d",
            "tags": {
              "Name": "3-Tier-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.aws-rds",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private1-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:subnet/subnet-0b5dbbdba471ab9ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "192.168.20.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-Private1-Subnet1"
                ]
              }
            ],
            "id": "subnet-0b5dbbdba471ab9ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "3-Tier-Private1-Subnet1"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          }
        }
      ]
    },
    {
      "module": "module.aws-rds",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private1-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:subnet/subnet-075746c3f833aa4e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "available_ip_address_count": 251,
            "cidr_block": "192.168.50.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-Private1-Subnet2"
                ]
              }
            ],
            "id": "subnet-075746c3f833aa4e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "3-Tier-Private1-Subnet2"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          }
        }
      ]
    },
    {
      "module": "module.aws-rds",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private2-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:subnet/subnet-0fd6a6dcb03fece4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "192.168.30.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-Private2-Subnet1"
                ]
              }
            ],
            "id": "subnet-0fd6a6dcb03fece4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "3-Tier-Private2-Subnet1"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          }
        }
      ]
    },
    {
      "module": "module.aws-rds",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private2-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:subnet/subnet-0a78a71a2c3aec84c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "available_ip_address_count": 251,
            "cidr_block": "192.168.60.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-Private2-Subnet2"
                ]
              }
            ],
            "id": "subnet-0a78a71a2c3aec84c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "3-Tier-Private2-Subnet2"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          }
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:vpc/vpc-0e10412dba9535c77",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-001a646ef99433bf5",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0ca02d48b1d18e4d7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-VPC"
                ]
              }
            ],
            "id": "vpc-0e10412dba9535c77",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bb9877f287698b9a",
            "owner_id": "891377163278",
            "tags": {
              "Name": "3-Tier-VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:security-group/sg-0a708124d04a13629",
            "description": "Protocol Type MySQL/Aurora",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a708124d04a13629",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a5d114e18916deb3"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-2024050900370426500000000d",
            "name_prefix": "terraform-",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "3-Tier-db-sg"
            },
            "tags_all": {
              "Name": "3-Tier-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.was-alb-sg",
            "module.security-group.aws_security_group.was-tier-sg",
            "module.security-group.aws_security_group.web-alb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private1-rt1",
            "module.vpc.aws_route_table.private1-rt2",
            "module.vpc.aws_route_table.private2-rt1",
            "module.vpc.aws_route_table.private2-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private1-rt-association1",
            "module.vpc.aws_route_table_association.private1-rt-association2",
            "module.vpc.aws_route_table_association.private2-rt-association1",
            "module.vpc.aws_route_table_association.private2-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private1-subnet1",
            "module.vpc.aws_subnet.private1-subnet2",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "was-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:security-group/sg-06ec60fe4f80cb312",
            "description": "Allow WEB EC2 ONLY",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ec60fe4f80cb312",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-016d78b3f0bd91bc7"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-2024050900365912250000000b",
            "name_prefix": "terraform-",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "3-Tier-was-alb-sg"
            },
            "tags_all": {
              "Name": "3-Tier-was-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.web-alb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private1-rt1",
            "module.vpc.aws_route_table.private1-rt2",
            "module.vpc.aws_route_table.private2-rt1",
            "module.vpc.aws_route_table.private2-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private1-rt-association1",
            "module.vpc.aws_route_table_association.private1-rt-association2",
            "module.vpc.aws_route_table_association.private2-rt-association1",
            "module.vpc.aws_route_table_association.private2-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private1-subnet1",
            "module.vpc.aws_subnet.private1-subnet2",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "was-tier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:security-group/sg-0a5d114e18916deb3",
            "description": "Allow HTTP and HTTPS for WEB Only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5d114e18916deb3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06ec60fe4f80cb312"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-2024050900370164010000000c",
            "name_prefix": "terraform-",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "3-Tier-was-sg"
            },
            "tags_all": {
              "Name": "3-Tier-was-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.was-alb-sg",
            "module.security-group.aws_security_group.web-alb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private1-rt1",
            "module.vpc.aws_route_table.private1-rt2",
            "module.vpc.aws_route_table.private2-rt1",
            "module.vpc.aws_route_table.private2-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private1-rt-association1",
            "module.vpc.aws_route_table_association.private1-rt-association2",
            "module.vpc.aws_route_table_association.private2-rt-association1",
            "module.vpc.aws_route_table_association.private2-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private1-subnet1",
            "module.vpc.aws_subnet.private1-subnet2",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:security-group/sg-0e60b1cc86212cf5a",
            "description": "Allow HTTP and HTTPS for World",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e60b1cc86212cf5a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240509003654851300000009",
            "name_prefix": "terraform-",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "3-Tier-web-alb-sg"
            },
            "tags_all": {
              "Name": "3-Tier-web-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private1-rt1",
            "module.vpc.aws_route_table.private1-rt2",
            "module.vpc.aws_route_table.private2-rt1",
            "module.vpc.aws_route_table.private2-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private1-rt-association1",
            "module.vpc.aws_route_table_association.private1-rt-association2",
            "module.vpc.aws_route_table_association.private2-rt-association1",
            "module.vpc.aws_route_table_association.private2-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private1-subnet1",
            "module.vpc.aws_subnet.private1-subnet2",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-tier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:security-group/sg-016d78b3f0bd91bc7",
            "description": "Allow HTTP and HTTPS for ALB Only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-016d78b3f0bd91bc7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e60b1cc86212cf5a"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e60b1cc86212cf5a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-2024050900365694190000000a",
            "name_prefix": "terraform-",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "3-Tier-web-sg"
            },
            "tags_all": {
              "Name": "3-Tier-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.web-alb-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private1-rt1",
            "module.vpc.aws_route_table.private1-rt2",
            "module.vpc.aws_route_table.private2-rt1",
            "module.vpc.aws_route_table.private2-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private1-rt-association1",
            "module.vpc.aws_route_table_association.private1-rt-association2",
            "module.vpc.aws_route_table_association.private2-rt-association1",
            "module.vpc.aws_route_table_association.private2-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private1-subnet1",
            "module.vpc.aws_subnet.private1-subnet2",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069269a657694c736",
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:elastic-ip/eipalloc-069269a657694c736",
            "domain": "vpc",
            "id": "eipalloc-069269a657694c736",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-229-185-123.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.185.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "3-Tier-Elastic-IP1"
            },
            "tags_all": {
              "Name": "3-Tier-Elastic-IP1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4004fb04aad6022",
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:elastic-ip/eipalloc-0c4004fb04aad6022",
            "domain": "vpc",
            "id": "eipalloc-0c4004fb04aad6022",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-18-139-45-86.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.139.45.86",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "3-Tier-Elastic-IP2"
            },
            "tags_all": {
              "Name": "3-Tier-Elastic-IP2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:internet-gateway/igw-02642c2df452acd6b",
            "id": "igw-02642c2df452acd6b",
            "owner_id": "891377163278",
            "tags": {
              "Name": "3-Tier-Interet-Gateway"
            },
            "tags_all": {
              "Name": "3-Tier-Interet-Gateway"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069269a657694c736",
            "association_id": "eipassoc-0497967a14c3349dc",
            "connectivity_type": "public",
            "id": "nat-02f6a9a3e98903d3b",
            "network_interface_id": "eni-07252ebb5010ee812",
            "private_ip": "192.168.10.23",
            "public_ip": "13.229.185.123",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08d8c840d155b0ed1",
            "tags": {
              "Name": "3-Tier-NAT1"
            },
            "tags_all": {
              "Name": "3-Tier-NAT1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4004fb04aad6022",
            "association_id": "eipassoc-03a82feba12f8e555",
            "connectivity_type": "public",
            "id": "nat-0cb901dcd4b48c0c5",
            "network_interface_id": "eni-0c0feb7013b659555",
            "private_ip": "192.168.40.41",
            "public_ip": "18.139.45.86",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0823da2c6ca30d684",
            "tags": {
              "Name": "3-Tier-NAT2"
            },
            "tags_all": {
              "Name": "3-Tier-NAT2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:route-table/rtb-0f044f3b435dbff67",
            "id": "rtb-0f044f3b435dbff67",
            "owner_id": "891377163278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02f6a9a3e98903d3b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "3-Tier-Private1-Route-table1"
            },
            "tags_all": {
              "Name": "3-Tier-Private1-Route-table1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1-rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:route-table/rtb-000eda4b6610c10e8",
            "id": "rtb-000eda4b6610c10e8",
            "owner_id": "891377163278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0cb901dcd4b48c0c5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "3-Tier-Private1-Route-table2"
            },
            "tags_all": {
              "Name": "3-Tier-Private1-Route-table2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private1-rt1",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private1-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private1-subnet1",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:route-table/rtb-063d85cd8d3c01f8d",
            "id": "rtb-063d85cd8d3c01f8d",
            "owner_id": "891377163278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02f6a9a3e98903d3b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "3-Tier-Private2-Route-table1"
            },
            "tags_all": {
              "Name": "3-Tier-Private2-Route-table1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2-rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:route-table/rtb-027e13a3b274bc3a0",
            "id": "rtb-027e13a3b274bc3a0",
            "owner_id": "891377163278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0cb901dcd4b48c0c5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "3-Tier-Private2-Route-table2"
            },
            "tags_all": {
              "Name": "3-Tier-Private2-Route-table2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private2-rt1",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private2-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:route-table/rtb-068b2c7a7e871a04f",
            "id": "rtb-068b2c7a7e871a04f",
            "owner_id": "891377163278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02642c2df452acd6b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "3-Tier-Public-Route-table1"
            },
            "tags_all": {
              "Name": "3-Tier-Public-Route-table1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:route-table/rtb-0b6b9bc7c73d6e8ba",
            "id": "rtb-0b6b9bc7c73d6e8ba",
            "owner_id": "891377163278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02642c2df452acd6b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "3-Tier-Public-Route-table2"
            },
            "tags_all": {
              "Name": "3-Tier-Public-Route-table2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1-rt-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c1732174e9c876e",
            "route_table_id": "rtb-0f044f3b435dbff67",
            "subnet_id": "subnet-0b5dbbdba471ab9ca"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private1-rt1",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private1-subnet1",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1-rt-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b0e6744718848c3",
            "route_table_id": "rtb-000eda4b6610c10e8",
            "subnet_id": "subnet-075746c3f833aa4e6"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private1-rt1",
            "module.vpc.aws_route_table.private1-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private1-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private1-subnet1",
            "module.vpc.aws_subnet.private1-subnet2",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2-rt-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1262834aa0c0476",
            "route_table_id": "rtb-063d85cd8d3c01f8d",
            "subnet_id": "subnet-0fd6a6dcb03fece4d"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private2-rt1",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2-rt-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fcc0d158b6583eb",
            "route_table_id": "rtb-027e13a3b274bc3a0",
            "subnet_id": "subnet-0a78a71a2c3aec84c"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private2-rt1",
            "module.vpc.aws_route_table.private2-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private2-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082dd55a197f337fc",
            "route_table_id": "rtb-068b2c7a7e871a04f",
            "subnet_id": "subnet-08d8c840d155b0ed1"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093857159f9e885da",
            "route_table_id": "rtb-0b6b9bc7c73d6e8ba",
            "subnet_id": "subnet-0823da2c6ca30d684"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.private2-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:subnet/subnet-0b5dbbdba471ab9ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5dbbdba471ab9ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3-Tier-Private1-Subnet1"
            },
            "tags_all": {
              "Name": "3-Tier-Private1-Subnet1"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:subnet/subnet-075746c3f833aa4e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075746c3f833aa4e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3-Tier-Private1-Subnet2"
            },
            "tags_all": {
              "Name": "3-Tier-Private1-Subnet2"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private1-subnet1",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:subnet/subnet-0fd6a6dcb03fece4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd6a6dcb03fece4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3-Tier-Private2-Subnet1"
            },
            "tags_all": {
              "Name": "3-Tier-Private2-Subnet1"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:subnet/subnet-0a78a71a2c3aec84c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.60.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a78a71a2c3aec84c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3-Tier-Private2-Subnet2"
            },
            "tags_all": {
              "Name": "3-Tier-Private2-Subnet2"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private2-subnet1",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:subnet/subnet-08d8c840d155b0ed1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d8c840d155b0ed1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3-Tier-Public-Subnet1"
            },
            "tags_all": {
              "Name": "3-Tier-Public-Subnet1"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:subnet/subnet-0823da2c6ca30d684",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0823da2c6ca30d684",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3-Tier-Public-Subnet2"
            },
            "tags_all": {
              "Name": "3-Tier-Public-Subnet2"
            },
            "vpc_id": "vpc-0e10412dba9535c77"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377163278:vpc/vpc-0e10412dba9535c77",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08ecbad5f9a6b65d5",
            "default_route_table_id": "rtb-0bb9877f287698b9a",
            "default_security_group_id": "sg-0bd7fbfdff8a39c40",
            "dhcp_options_id": "dopt-0ca02d48b1d18e4d7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e10412dba9535c77",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bb9877f287698b9a",
            "owner_id": "891377163278",
            "tags": {
              "Name": "3-Tier-VPC"
            },
            "tags_all": {
              "Name": "3-Tier-VPC"
            }
          }
        }
      ]
    }
  ]
}